<resources>
    <string name="app_name">CriminalIntent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title:</string>
    <string name="crime_details_label">Details:</string>
    <string name="crime_solved_label">Solved</string>
    <string name="title_activity_crime_pager">CrimePagerActivity</string>

    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>

    <string name="menu_add_crime">Add Crime</string>
    <string name="menu_delete_selected_crime">Delete Selected Crime</string>
    <string name="menu_delete_crime">Delete Crime</string>
    <string name="menu_selectAll_crime">Select All Crimes</string>
    <string name="menu_unSelectAll_crime">UnSelect All Crimes</string>
    <string name="menu_item_clear">Clear</string>
    <string name="menu_item_show_subtitle">Show Subtitle</string>
    <string name="menu_item_hide_subtitle">Hide Subtitle</string>
    <string name="empty_crime_list">You Don\'t Have Any Crimes.</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="toast_sign_up">Enter Username and Password</string>
    <string name="toast_login">The Username or Password entered are incorrect</string>

    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>

    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_to">Call to %s</string>
    <string name="dial_to">Dial to %s</string>
    <string name="call">Call</string>
    <string name="dial">Dial</string>

    <string name="crime_dismiss_success">Crime Dismissed Successfully.</string>
    <string name="crime_dismiss_undo">UNDO</string>
</resources>